wind field notebook

--- a/notebooks/example1.ini
+++ b/notebooks/example1.ini
@@ -1,7 +1,7 @@
 # Fichier de paramètres pour la génération de vent YaWiSi
 
 [Simulation]
-n_samples: 18000 
+n_samples: 1800 
 ;Number of samples
 sample_time: 0.1 
 ;Sample Time
@@ -24,26 +24,14 @@ sigma_3: 1.56
 ; std of wind fluctuation of the vertical component
 
 [Field]
-hub_height:60		
+hub_height:80		
 ; HubHeigt
 vertical_shear:0.3	
 ; Vertical Shear
-Nz:1
-; number of nodes along y axe 
-Ny:20
-; number of nodes along x axe
-Zmin:60
-;min altitude of grid for z axe 
-Zmax:60
-;max altitude of grid for z axe
-Ymin:0
-;min longitude for y axe 
-Ymax:100
-;max longitude for y axe
-; grid_width:100		
+grid_width:100		
 ; Grid width
-; grid_height:100		
+grid_height:100		
 ; Grid height
-; grid_length:11		
+grid_length:11		
 ; Grid sqrt(Npoints)
 
